--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -5,7 +5,10 @@
 @import './component/about';
 @import './component/services';
 @import './component/slider';
+@import './component/accordion';
+@import './component/blog';
 @import './component/mixin';
 @import './component/responsive';
+
 
 
