--- a/src/assets/component/_banner.scss
+++ b/src/assets/component/_banner.scss
@@ -1,43 +1,49 @@
 .banner{
-    .banner-container{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        padding: 50px;
-        .banner-text{
-            // padding: 50px;
-            h3{
-                font-size: 22px;
-                margin-bottom: 10px;
-                line-height: 22px;
-                color: $--color-white;
-            }
-            h1{
-                font-size: 48px;
-                color: $--color-white;
-                font-weight: 600;
-            }
-            p{
-                font-size: 16px;
-                color: $--color-p;
-                margin-bottom: 30px;
-            }
-            #btn{
-                // @include buttonStyle();
-                padding: 10px 30px;
-                background-color: $--bg-btn;
-                border-radius: 25px;
-                color: $--color-white;
-                font-size: 18px;
-                cursor: pointer;
-            }
+        .banner-container{          
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                padding: 50px; 
+                .banner-text{
+                    // padding: 50px;
+                    h3{
+                        font-size: 26px;
+                        margin-bottom: 10px;
+                        line-height: 22px;
+                        color: $--color-p;
+                        
+                    }
+                    h1{
+                        font-size: 32px;
+                        text-transform: uppercase;
+                        color: $--color-white;
+                        font-weight: bold;
+                        filter: brightness(200%);
+                    }
+                    p{
+                        font-size: 16px;
+                        color: $--color-p;
+                        margin-bottom: 30px;
+                    }
+                    #btn{
+                        // @include buttonStyle();
+                        padding: 10px 30px;
+                        background-color: $--bg-btn;
+                        border-radius: 25px;
+                        color: $--color-white;
+                        font-size: 18px;
+                        cursor: pointer;
+                    }
+                }
+                img{
+                    width: 50%;
+                    height: 100%;
+                    object-fit: cover;
+                    padding: 20px;
+                   
+                }
+       
         }
-        img{
-            width: 50%;
-            height: 100%;
-            object-fit: cover;
-            padding: 20px;
-        }
-    }
+    
     
 }
