--- a/src/assets/component/_header.scss
+++ b/src/assets/component/_header.scss
@@ -3,7 +3,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 10px 90px;
-    box-shadow: rgba(61, 64, 66, 0.2) 0px 8px 24px;
+    box-shadow: rgba(85, 89, 91, 0.2) 0px 8px 24px;
     .logo{
         a{
             img{
@@ -22,7 +22,7 @@
                 position: relative;
                 
                 a{
-                    color: $--color-black;
+                    color: $--color-white;
                     font-size: 16px;
                     display: block;
                     font-weight: bold;
