--- a/src/assets/component/_reset.scss
+++ b/src/assets/component/_reset.scss
@@ -15,8 +15,12 @@ a{
     text-decoration: none;
 }
 body{
-    background: linear-gradient(90deg, rgba(186,35,254,1) 0%, rgba(159,47,255,1) 18%, rgba(132,56,250,1) 100%);
-    // background-color: #fff;
+    background: #00c6ff;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #0072ff, #00c6ff);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #0072ff, #00c6ff); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
+    // background: linear-gradient(90deg, rgba(186,35,254,1) 0%, rgba(159,47,255,1) 18%, rgba(132,56,250,1) 100%);
+        //  background-color: #fff;
 }
 // html{
 //     scroll-behavior: smooth;
