--- a/src/assets/component/_variable.scss
+++ b/src/assets/component/_variable.scss
@@ -4,7 +4,7 @@ $--second-bg-color: #f5f5f5;
 $--third-bg-color: #e3e3e3;
 
 // color
-$---grey: #4b4b4b;
+$--grey: #4b4b4b;
 $--color-black: #000;
 $--color-white: #fff;
 $--color-white-header: rgba(255, 255, 255, 0.785);
@@ -25,3 +25,6 @@ $--btn-color: #fff;
 
 //bg - menu bar
 $--bg-menubar: rgba(0, 0, 0, 0.557);
+
+// button prve and next
+$--swiper-navigation-size: 18px;
