--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -7,6 +7,7 @@
 @import './component/slider';
 @import './component/accordion';
 @import './component/blog';
+@import './component/customer';
 @import './component/mixin';
 @import './component/responsive';
 
