--- a/src/assets/component/_responsive.scss
+++ b/src/assets/component/_responsive.scss
@@ -119,12 +119,28 @@
                     .author-content{
                         padding: 8px 10px !important;
                     }
+                    .author-box{
+                        width: 20px;
+                    }
                 }
             }
         }
     
     }
-
+    .accordion{
+        .accordion-list{
+            .accordion-content{
+                .accordion-item{
+                    button{
+                        strong{
+                            font-size: 13px;
+                            text-align: left;
+                        }
+                    }
+                }
+            }
+        }
+    }
     .accordion-list{
         max-width: 100%;
         padding: 0 !important;
