--- a/src/assets/component/_about.scss
+++ b/src/assets/component/_about.scss
@@ -78,6 +78,7 @@
                                     font-style: italic;
                                     color: gray;
                                     letter-spacing: 1px;
+                                    font-size: 14px;
                                 }
                             }
                         }
