--- a/src/assets/component/_responsive.scss
+++ b/src/assets/component/_responsive.scss
@@ -11,7 +11,18 @@
         max-width: 100%;
         padding: 0 !important;
     }    
-    
+    .counter-number{
+        .counter-wrapper {
+            // width: 85vw;
+            .container {
+                // height: 26vmin;
+                // width: 26vmin;
+                // font-size: 12px;
+              }
+        }
+    }
+   
+      
 }
 @media (max-width: 768px) {
     .header{
@@ -150,6 +161,18 @@
             }
         }
     }
+    .counter-number{
+        .counter-wrapper {
+            // width: 90vw;
+            // flex-wrap: wrap;
+            // gap: 30px;
+            .container {
+                // width: calc(50% - 40px);
+                // height: 30vmin;
+                // font-size: 14px;
+              }
+        }
+    }
     .accordion-list{
         max-width: 100%;
         padding: 0 !important;
@@ -201,6 +224,15 @@
             }
         }
     }
+    .contact{
+        .contact-container{
+            display: flex;
+            flex-direction: column;
+            padding: 10px;
+               
+            
+        }
+    }
 }
 @media (max-width: 440px){
     .banner{
@@ -223,9 +255,7 @@
                     }
                 }
             }
-        }
-      
-       
+        }       
     }
     .about{
         .about-container{
@@ -247,7 +277,28 @@
             }
         }
     }
-    
+    .counter-wrapper{
+        // gap: 15px;
+        .container {
+            width: 100%;
+            height: 25vmin;
+            font-size: 8px;
+          }
+    }
+    .contact{
+        .contact-container{
+            padding: 0 10px !important;  
+            iframe {
+                padding: 10px !important;
+            } 
+            .form{
+                .form-list{
+                    padding: 10px;
+                }
+            }
+    }
 }
+    
+
    
 
