--- a/src/assets/index.scss
+++ b/src/assets/index.scss
@@ -8,6 +8,8 @@
 @import './component/accordion';
 @import './component/blog';
 @import './component/customer';
+@import './component/counter';
+@import './component/contact';
 @import './component/mixin';
 @import './component/responsive';
 
